--- a/package.json
+++ b/package.json
@@ -16,5 +16,27 @@
   "bugs": {
     "url": "https://github.com/Mufolk/react-redux-api/issues"
   },
-  "homepage": "https://github.com/Mufolk/react-redux-api#readme"
+  "homepage": "https://github.com/Mufolk/react-redux-api#readme",
+  "dependencies": {
+    "axios": "^0.21.3",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
+    "react-redux": "^7.2.5",
+    "redux": "^4.1.1",
+    "redux-devtools-extension": "^2.13.9",
+    "redux-thunk": "^2.3.0"
+  },
+  "devDependencies": {
+    "@babel/core": "^7.15.5",
+    "@babel/preset-env": "^7.15.4",
+    "@babel/preset-react": "^7.14.5",
+    "babel-loader": "^8.2.2",
+    "cross-env": "^7.0.3",
+    "html-webpack-plugin": "^5.3.2",
+    "serve": "^12.0.0",
+    "terser-webpack-plugin": "^5.2.3",
+    "webpack": "^5.52.0",
+    "webpack-cli": "^4.8.0",
+    "webpack-dev-server": "^4.1.0"
+  }
 }
