--- a/package.json
+++ b/package.json
@@ -4,7 +4,10 @@
   "description": "\"# react-redux-api\"",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "dev": "cross-env NODE_ENV=development webpack-dev-server",
+    "build": "cross-env NODE_ENV=production webpack",
+    "start": "serve dist"
   },
   "repository": {
     "type": "git",
